# knights-tour

./: .Valgrind.txt.swp  .driver.cpp.swp  .gitignore  CMakeLists.txt  Makefile  Makefile.thetour  OUTPUT_of_tour.txt  README.md  Report.docx  Stack.cpp  Stack.h  State.cpp  State.h  TheTour  Valgrind.txt  Warnsdorffs.cpp  Warnsdorffs.h  chess_board.cpp  chess_board.h  driver.cpp  main.cpp  postion.cpp  postion.h  thetour.mpc
Algorthims/: .Algorthims.cpp.swp  .Algorthims.h.swp  Algorthims.cpp  Algorthims.h
Algorthims/DepthFirst/: .DepthFirst.cpp.swp  .DepthFirst.h.swp  DepthFirst.cpp  DepthFirst.h
Algorthims/Warnsdorffs/: .Warnsdorffs.cpp.swp  Warnsdorffs.cpp  Warnsdorffs.h
chess_board/: chess_board.cpp  chess_board.h
tour/: driver.cpp
tour/Algorthims/: Algorthims.h
tour/chess_board/: chess_board.cpp
tour_test/: CMakeLists.txt  tour_test_main.cpp
tour_test/basic_tests/: CMakeLists.txt  basic_check.cpp
utils/: string_formater.cpp
utils/Stack/: Stack.cpp  Stack.h
utils/postion/: postion.cpp  postion.h
